Change default gd.jpeg_ignore_warning = 1

Ignoring these warnings apparently works fine (libgd does so in
gdImageCreateJpeg()), but not ignoring them may cause imagecreatefromjpeg()
to fail completely, so it seems reasonable to ignore warnings by default.

Note that this change most likely doesn't constitute a BC break; we're
simply being more resilient with regard to slightly broken JPEGs.

See also the related [bug #72404](https://bugs.php.net/bug.php?id=72404).